--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ div.outer {
   flex-direction:column
 }
 div.inner{
-  background-color: rgb(203, 204, 204);
+  background-color:#ffffff;
   width: 40%;
   border: solid black 2px;
   border-radius: 3px;
